fixing flex layout issues

--- a/scss/_custom-navigation.scss
+++ b/scss/_custom-navigation.scss
@@ -18,10 +18,9 @@
     width: 100%;
 }
 
-.date-nav li {
+.date-nav a {
     flex: 1;
-    list-style: none;
-    margin: 0;
+    padding: ($spacer * 0.75) ($spacer * 0.5);
 }
 
 .date-nav-button {
@@ -53,7 +52,6 @@
 }
 
 .date-nav-calendar {
-    
     justify-content: center;
     vertical-align: middle;
 
@@ -73,6 +71,7 @@
     overflow: auto;
     display:flex;
     border-radius: 9999px;
+    margin-top: $spacer;
   }
   
   /* Navigation links */
